--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="open_radio">Open Radio</string>
+    <string name="user_settings">User settings</string>
+    <string name="options">Options</string>
+    <string name="donate">Donate</string>
 </resources>
